[tool.poetry]
name = "pyjourney"
version = "0.1.0"
description = "mj"
authors = ["agentd00nut <agentd00nut@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.30.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
